# Comik

./: Cargo.toml  readme.md
.github/workflows/: build.yml
doc/: execute.md
src/: context.rs  main.rs
src/command/execute/: dmzj.rs  mod.rs
src/model/: dmzj.rs  mod.rs
src/util/: mail.rs  mod.rs  pdf.rs
