[package]
name = "comik"
version = "1.0.1"
edition = "2021"

[dependencies]
const_format = "0.2.25"

dirs = "4.0.0"

clap = { version = "3.2.5", features = ["derive"] }

native-tls = "0.2.10"
lettre = "0.10.1"

serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

printpdf = { version = "0.5.2", features = ["embedded_images"] }

reqwest = { version = "0.11", features = ["blocking", "json"] }

url-escape = "0.1.1"